<resources>
    <string name="app_name">Lemon App</string>
    <string name="nome">Lemon App</string>
    <string name="intro">Seja bem-vindo ao Lemon App!</string>
    <string name="btnLogin">Login</string>
    <string name="btnCadastro">Cadastro</string>
    <string name="btnFazerCadastro">Não tem uma conta? Faça o cadastro</string>
    <string name="btnEsqueceuSenha">Esqueci minha senha</string>
    <string name="btnRedefinir">Redefinir</string>
    <string name="btnVoltarLogin">Voltar para o Login</string>
    <string name="btnAdmin">Entrar como administrador</string>
    <string name="btnColaborador">Entrar como colaborador</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="labelSenha">Digite sua senha</string>
    <string name="labelEmail">Digite seu e-mail</string>
    <string name="labelConfirmSenha">Confirme sua senha</string>
    <string name="btnBomHoje">O que você fez de bom hoje?</string>
    <string name="acao1">Cultivei horta doméstica</string>
    <string name="acao2">Separei lixo reciclável</string>
    <string name="acao3">Alimentação saudável</string>
    <string name="acao4">Pratiquei atividades fisícas</string>
    <string name="acao5">Projetos voluntários</string>
    <string name="acao6">Alternativas de transporte</string>
    <string name="btnInicio">Inicio</string>
    <string name="btnBonificacao">Prêmios</string>
    <string name="btnPontuacao">Pontuação</string>
    <string name="btnDicas">Dicas</string>
    <string name="btnEntrar">Entrar</string>
    <string name="pontos">+20</string>
    <string name="introNome">Olá, Colab!</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dicas_intro">Veja algumas dicas para você completar suas ações:</string>
    <string name="ecopontos">Ecopontos</string>
    <string name="mapa_ecopontos">Ver ecopontos</string>
    <string name="voluntario">ONGs</string>
    <string name="cultivo">Dicas de cultivo</string>
    <string name="btnCultivo">Ver dicas</string>
    <string name="receitas">Receitas fit</string>
    <string name="btnReceitas">Ver receitas</string>
    <string name="titlePontos">Seus Pontos</string>
    <string name="ranking">Ranking</string>
    <string name="nameRanking1">Bruna Satiro</string>
    <string name="pontosRanking1">240 pontos</string>
    <string name="nameRanking2">Kayke Guedes</string>
    <string name="pontosRanking2">210 pontos</string>
    <string name="nameRanking3">Claudia Dias</string>
    <string name="pontosRanking3">195 pontos</string>
    <string name="nameRanking4">Thais Oliveira</string>
    <string name="pontosRanking4">165 pontos</string>
    <string name="nameRanking5">Eduardo Negri</string>
    <string name="pontosRanking5">140 pontos</string>
    <string name="nameRanking6">Raphael Veiga</string>
    <string name="pontosRanking6">130 pontos</string>
    <string name="nameRanking7">Andressa Lima</string>
    <string name="pontosRanking7">110 pontos</string>
    <string name="nameRanking8">Ricardo Freitas</string>
    <string name="pontosRanking8">110 pontos</string>
    <string name="nameRanking9">Fran Guedes</string>
    <string name="pontosRanking9">85 pontos</string>
    <string name="pontosPontuacao">10</string>
    <string name="labelNomeCadastro">Nome completo:</string>
    <string name="nomeCadastro">Digite seu nome:</string>
    <string name="labelfuncaoCadastro">Colaborador ou Administrador:</string>
    <string name="funcaoCadastro">Selecione sua função:</string>
    <string name="labelEmailCadastro">E-mail empresarial:</string>
    <string name="emailCadastro">Digite seu e-mail:</string>
    <string name="labelSenhaCadastro">Crie uma senha:</string>
    <string name="senhaCadastro">Digite sua senha:</string>
    <string name="jaTemCadastro">Já tenho cadastro! Fazer login</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="titlePremios">Seus Prêmios</string>
    <string name="parabens">Parabéns!</string>
    <string name="top3">Você está no TOP 3</string>
    <string name="nomePremios">Bruna Satiro</string>
    <string name="pontosPremios">240 pontos</string>
    <string name="opcoesPremios">Você vai ganhar:</string>
    <string name="premio1">1 mês grátis de assinatura Gympass</string>
    <string name="premio2">+ 100 reais no seu Vale Refeição</string>
    <string name="premio3">30% de desconto no Liv Up</string>
    <string name="btnDetalhes">Ver Detalhes</string>
    <string name="redesSociais">Compartilhe nas suas redes sociais:</string>
    <string name="btnExplorar">Explorar</string>
    <string name="ongs">Ongs e Projetos</string>
    <string name="parceriaGympass">Parceria Gympass</string>
    <string name="ecopontosMap">Ecopontos perto de você:</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="tod4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>