<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeEscuroLetra"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/iconLogo2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_logo_app_foreground" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="214dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/verdeClaro"
        android:text="@string/btnCadastrar"
        android:textColor="@color/verdeEscuroLetra"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmSenha" />

    <EditText
        android:id="@+id/inputSenha"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/activity_backgroundinput"
        android:ems="10"
        android:paddingStart="20dp"
        android:text="@string/emailCadastro"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/labelEmail"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />


    <EditText
        android:id="@+id/inputSenha2"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/activity_backgroundinput"
        android:ems="10"
        android:paddingStart="20dp"
        android:text="@string/funcaoCadastro"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/labelFuncao"
        app:layout_constraintTop_toBottomOf="@+id/labelFuncao" />

    <EditText
        android:id="@+id/inputSenha3"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/activity_backgroundinput"
        android:ems="10"
        android:paddingStart="20dp"
        android:text="@string/nomeCadastro"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNome" />

    <EditText
        android:id="@+id/confirmSenha"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/activity_backgroundinput"
        android:ems="10"
        android:paddingStart="20dp"
        android:text="@string/senhaCadastro"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/labelSenha"
        app:layout_constraintTop_toBottomOf="@+id/labelSenha"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/btnFazerCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/jaTemCadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/labelEmailCadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/inputSenha2"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha2" />

    <TextView
        android:id="@+id/labelFuncao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/labelfuncaoCadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/inputSenha3"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha3" />

    <TextView
        android:id="@+id/labelNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelNomeCadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/inputSenha3"
        app:layout_constraintTop_toBottomOf="@+id/iconLogo2" />

    <TextView
        android:id="@+id/labelSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/labelSenhaCadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/inputSenha"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha" />


</androidx.constraintlayout.widget.ConstraintLayout>