<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeEscuroLetra"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/iconLogo2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_logo_app_foreground" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="214dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/verdeClaro"
        android:text="@string/btnRedefinir"
        android:textColor="@color/verdeEscuroLetra"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/confirmSenha"
        app:layout_constraintStart_toStartOf="@+id/confirmSenha"
        app:layout_constraintTop_toBottomOf="@+id/confirmSenha" />

    <EditText
        android:id="@+id/inputSenha"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/activity_backgroundinput"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:text="@string/senha"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSenha" />

    <EditText
        android:id="@+id/confirmSenha"
        android:layout_width="270dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/activity_backgroundinput"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:text="@string/senha"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/labelConfirmSenha"
        app:layout_constraintTop_toBottomOf="@+id/labelConfirmSenha"
        tools:ignore="MissingConstraints" />

    <TextView
    android:id="@+id/btnFazerCadastro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/btnFazerCadastro"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <TextView
        android:id="@+id/btnVoltarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btnVoltarLogin"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFazerCadastro" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSenha"
        app:layout_constraintStart_toStartOf="@+id/inputSenha"
        app:layout_constraintTop_toTopOf="@+id/inputSenha"
        app:srcCompat="@drawable/ic_iconsenha" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/confirmSenha"
        app:layout_constraintStart_toStartOf="@+id/confirmSenha"
        app:layout_constraintTop_toTopOf="@+id/confirmSenha"
        app:srcCompat="@drawable/ic_iconsenha" />

    <TextView
        android:id="@+id/labelSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/senha"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/inputSenha"
        app:layout_constraintTop_toBottomOf="@+id/iconLogo2" />

    <TextView
        android:id="@+id/labelConfirmSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/labelConfirmSenha"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/inputSenha"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha" />


</androidx.constraintlayout.widget.ConstraintLayout>